--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@heroui/avatar": "^2.2.13",
     "@heroui/button": "2.2.17",
     "@heroui/card": "^2.2.16",
+    "@heroui/checkbox": "^2.3.16",
     "@heroui/code": "2.2.12",
     "@heroui/dropdown": "2.3.17",
     "@heroui/image": "^2.2.10",
     "@heroui/input": "2.4.17",
     "@heroui/kbd": "2.2.13",
     "@heroui/link": "2.2.14",
+    "@heroui/modal": "^2.2.14",
     "@heroui/navbar": "2.2.15",
     "@heroui/popover": "^2.3.17",
     "@heroui/snippet": "2.2.18",
