--- a/package.json
+++ b/package.json
@@ -32,13 +32,16 @@
     "@react-types/shared": "3.28.0",
     "clsx": "2.1.1",
     "framer-motion": "11.15.0",
+    "leaflet": "^1.9.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "6.23.0",
     "tailwind-variants": "0.3.0",
     "tailwindcss": "3.4.16"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.17",
     "@types/node": "20.5.7",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
