--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@heroui/link": "2.2.14",
     "@heroui/modal": "^2.2.14",
     "@heroui/navbar": "2.2.15",
+    "@heroui/pagination": "^2.2.17",
     "@heroui/popover": "^2.3.17",
     "@heroui/snippet": "2.2.18",
     "@heroui/spinner": "^2.2.16",
