--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@heroui/navbar": "2.2.15",
     "@heroui/pagination": "^2.2.17",
     "@heroui/popover": "^2.3.17",
+    "@heroui/scroll-shadow": "^2.3.13",
     "@heroui/snippet": "2.2.18",
     "@heroui/spinner": "^2.2.16",
     "@heroui/switch": "2.2.15",
