--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroui/button": "2.2.17",
     "@heroui/card": "^2.2.16",
     "@heroui/checkbox": "^2.3.16",
+    "@heroui/chip": "^2.2.15",
     "@heroui/code": "2.2.12",
     "@heroui/dropdown": "2.3.17",
     "@heroui/image": "^2.2.10",
