--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@heroui/system": "2.4.13",
     "@heroui/theme": "2.4.13",
     "@heroui/use-theme": "2.1.6",
+    "@heroui/user": "^2.2.15",
     "@react-aria/visually-hidden": "3.8.21",
     "@react-types/shared": "3.28.0",
     "clsx": "2.1.1",
